--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -224,22 +224,59 @@
 }
 
 @media (max-width: 768px) {
+  .about-page {
+    padding-top: 5rem;
+  }
+  
   .about-container {
     padding: 0 1rem;
+    max-width: 100%;
   }
   
   .about-content {
     grid-template-columns: 1fr;
     gap: 2rem;
-    text-align: center;
+    text-align: left;
+    padding: 0;
+  }
+  
+  .about-text {
+    width: 100%;
+    padding: 0;
   }
   
   .about-text h1 {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+  
+  .about-intro {
+    font-size: 1.1rem;
+    text-align: left;
+    margin-bottom: 1.5rem;
+  }
+  
+  .about-description {
+    width: 100%;
+    text-align: left;
+  }
+  
+  .about-description p {
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+    text-align: left;
+  }
+  
+  .about-image {
+    order: -1;
+    margin-bottom: 1rem;
   }
   
   .about-image img {
-    height: 400px;
+    height: 300px;
+    width: 100%;
   }
   
   .achievements h2,
@@ -254,15 +291,16 @@
   }
   
   .philosophy-content {
-    padding: 2rem 1.5rem;
+    padding: 2rem 1rem;
   }
   
   .philosophy-content blockquote {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    text-align: left;
   }
   
   .philosophy-content blockquote::before {
-    font-size: 3rem;
+    font-size: 2.5rem;
     top: -0.5rem;
     left: -1rem;
   }
