--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -191,21 +191,62 @@
   opacity: 0.3;
 }
 
-.image-container {
-  position: relative;
-  aspect-ratio: 4/3;
-  overflow: hidden;
+.stack {
+  width: 100%;
+  transition: 0.25s ease;
 }
 
-.image-container img {
+.stack:hover {
+  transform: rotate(5deg);
+}
+
+.stack:hover .card:before {
+  transform: translateY(-2%) rotate(-4deg);
+}
+
+.stack:hover .card:after {
+  transform: translateY(2%) rotate(4deg);
+}
+
+.card {
+  aspect-ratio: 3 / 2;
+  border: 4px solid var(--text-color);
+  background-color: var(--bg-color);
+  position: relative;
+  transition: 0.15s ease;
+  cursor: pointer;
+  padding: 5%;
+}
+
+.card:before,
+.card:after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border: 4px solid var(--text-color);
+  background-color: var(--bg-color);
+  transform-origin: center center;
+  z-index: -1;
+  transition: 0.15s ease;
+  top: 0;
+  left: 0;
+}
+
+.card:before {
+  transform: translateY(-2%) rotate(-6deg);
+}
+
+.card:after {
+  transform: translateY(2%) rotate(6deg);
+}
+
+.card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: transform 0.3s ease;
-}
-
-.gallery-item:hover .image-container img {
-  transform: scale(1.1);
+  border: 2px solid var(--text-color);
 }
 
 .image-overlay {
